@@ -14,14 +14,14 @@
 
 "use strict";
 
-var should = require('should');
-var binary = require('node-pre-gyp');
-var path = require('path');
-var rfc_path = binary.find(path.resolve(path.join(__dirname,'../package.json')));
+let should = require('should');
+let binary = require('node-pre-gyp');
+let path = require('path');
+let rfc_path = binary.find(path.resolve(path.join(__dirname,'../package.json')));
 console.log(rfc_path)
-var rfc = require(rfc_path);
+let rfc = require(rfc_path);
 
-var connParams = {
+let connParams = {
   user: 'demo',
   passwd: 'Welcome',
   ashost:  '10.117.19.101',
@@ -32,7 +32,7 @@ var connParams = {
 }
 
 describe("Connection", function() {
-  var client;
+  let client;
   beforeEach(function(done) {
     client = new rfc.Client(connParams);
     client.connect(function() { setTimeout(function() { done(); }, 0); });
@@ -42,8 +42,13 @@ describe("Connection", function() {
     client.close();
   });
 
+  it('getVersion() should return major, minor, patchLevel', function() {
+    let version = client.getVersion();
+    version.should.have.properties('major', 'minor', 'patchLevel');
+  });
+
   it('connectionInfo() should return connection information', function() {
-    var info = client.connectionInfo();
+    let info = client.connectionInfo();
     info.should.have.properties('dest', 'host', 'partnerHost', 'sysNumber', 'sysId',
       'client', 'user', 'language', 'trace', 'isoLanguage', 'codepage', 'partnerCodepage',
       'rfcRole', 'type', 'partnerType', 'rel', 'partnerRel', 'kernelRel', 'cpicConvId',
@@ -63,9 +68,9 @@ describe("Connection", function() {
 
 
   it('STFC_CONNECTION should work in parallel', function(done) {
-    var count = 5; //10
-    var j = count;
-    for (var i = 0; i < count; i++) {
+    let count = 5; //10
+    let j = count;
+    for (let i = 0; i < count; i++) {
       client.invoke('STFC_CONNECTION', { REQUTEXT: 'Hello SAP! ' + i },
         function(err, res) {
           should.not.exist(err);
@@ -80,8 +85,8 @@ describe("Connection", function() {
   });
 
 	it('STFC_CONNECTION should run sequentially', function(done) {
-		var iterations = 10;
-		var rec = function(depth) {
+		let iterations = 10;
+		let rec = function(depth) {
 			if (depth == iterations) {
 				done();
 				return;
@@ -125,7 +130,7 @@ describe("Connection", function() {
   });
 
   it('async test', function(done) {
-    var asyncRes = undefined;
+    let asyncRes = undefined;
     client.invoke('STFC_CONNECTION', { REQUTEXT: 'Hello SAP!' },
       function(err, res) {
         should.not.exist(err);
@@ -140,7 +145,7 @@ describe("Connection", function() {
   });
 
   it('STFC_STRUCTURE should return structure and table', function(done) {
-    var importStruct = {
+    let importStruct = {
       RFCFLOAT: 1.23456789,
       RFCCHAR1: 'A',
       RFCCHAR2: 'BC',
@@ -158,7 +163,7 @@ describe("Connection", function() {
       RFCDATA1: '1DATA1',
       RFCDATA2: 'DATA222'
     };
-    var importTable = [importStruct];
+    let importTable = [importStruct];
 
     client.invoke('STFC_STRUCTURE',
       { IMPORTSTRUCT: importStruct, RFCTABLE: importTable },
@@ -190,10 +195,10 @@ describe("Connection", function() {
   });
 
   it('CHAR type check', function(done) {
-    var importStruct = {
+    let importStruct = {
       RFCCHAR4: 65
     };
-    var importTable = [importStruct];
+    let importTable = [importStruct];
     client.invoke('STFC_STRUCTURE',
       { IMPORTSTRUCT: importStruct, RFCTABLE: importTable },
       function(err) {
@@ -207,14 +212,14 @@ describe("Connection", function() {
   }); 
 
   it('INT type check should detect strings', function(done) {
-    var importStruct = {
+    let importStruct = {
 
       RFCINT1: "1",
       RFCINT2: 2,
       RFCINT4: 345
 
     };
-    var importTable = [importStruct];
+    let importTable = [importStruct];
     client.invoke('STFC_STRUCTURE',
       { IMPORTSTRUCT: importStruct, RFCTABLE: importTable },
       function(err) {
@@ -228,13 +233,13 @@ describe("Connection", function() {
   });
   
   it('INT type check should detect floats', function(done) {
-    var importStruct = {
+    let importStruct = {
       RFCINT1: 1,
       RFCINT2: 2,
       RFCINT4: 3.1
 
     };
-    var importTable = [importStruct];
+    let importTable = [importStruct];
     client.invoke('STFC_STRUCTURE',
       { IMPORTSTRUCT: importStruct, RFCTABLE: importTable },
       function(err) {
@@ -248,10 +253,10 @@ describe("Connection", function() {
   });
   
   it('FLOAT type check', function(done) {
-    var importStruct = {
+    let importStruct = {
       RFCFLOAT: "A"
     };
-    var importTable = [importStruct];
+    let importTable = [importStruct];
     client.invoke('STFC_STRUCTURE',
       { IMPORTSTRUCT: importStruct, RFCTABLE: importTable },
       function(err) {
@@ -267,7 +272,7 @@ describe("Connection", function() {
 });
 
 describe("More complex RFCs", function() {
-  var client;
+  let client;
   beforeEach(function(done) {
     client = new rfc.Client(connParams);
     client.connect(function() { setTimeout(function() { done(); }, 0); });
@@ -294,7 +299,7 @@ describe("More complex RFCs", function() {
 });
 
 describe("Error handling", function() {
-  var client;
+  let client;
   beforeEach(function(done) {
     client = new rfc.Client(connParams);
     client.connect(function() { setTimeout(function() { done(); }, 0); });
@@ -336,15 +341,15 @@ describe("Error handling", function() {
   });
 
   it('Logon failure with wrong credentials', function(done) {
-    var wrongParams = {};
-    for (var attr in connParams) {
+    let wrongParams = {};
+    for (let attr in connParams) {
       if (connParams.hasOwnProperty(attr)) {
         wrongParams[attr] = connParams[attr];
       }
     }
     wrongParams.user = 'WRONGUSER';
 
-    var wrongClient = new rfc.Client(wrongParams);
+    let wrongClient = new rfc.Client(wrongParams);
     wrongClient.connect(function(err) {
       should.exist(err);
       err.should.have.properties({
@@ -358,15 +363,15 @@ describe("Error handling", function() {
   });
 
   it('Connection parameter missing', function(done) {
-    var wrongParams = {};
-    for (var attr in connParams) {
+    let wrongParams = {};
+    for (let attr in connParams) {
       if (connParams.hasOwnProperty(attr)) {
         wrongParams[attr] = connParams[attr];
       }
     }
     delete wrongParams.ashost;
 
-    var wrongClient = new rfc.Client(wrongParams);
+    let wrongClient = new rfc.Client(wrongParams);
     wrongClient.connect(function(err) {
       should.exist(err);
       err.should.have.properties({
@@ -381,7 +386,7 @@ describe("Error handling", function() {
 
   it('No connection parameters provided at all', function(done) {
     try {
-      var noClient = new rfc.Client();
+      let noClient = new rfc.Client();
     } catch (err) {
       should.exist(err);
       err.should.have.properties({
